# beetle

./: CMakeLists.txt
Example/: CMakeLists.txt  main.cpp
Resources/: core.fs  core.vs
src/: CMakeLists.txt  CmakeSources.cmake  README.md  beetle.h
src/Engine/: engine.hpp  resource_manager.cpp  resource_manager.hpp  shader.cpp  sprite_renderer.cpp  sprite_renderer.hpp  texture.cpp  texture.hpp
src/Node/: node.hpp
src/Scene/: scene.cpp  scene.hpp
src/Shader/: shader.hpp
src/Sprite/: sprite.cpp  sprite.hpp  sprite_renderer.cpp  sprite_renderer.hpp
src/Texture/: texture.hpp
src/Utility/: rect.hpp  vec.hpp  vec2.hpp  vec3.hpp
src/Window/: event.hpp  resource_manager.cpp  resource_manager.hpp  window.cpp  window.hpp
src/cmake/: FindBeetle.cmake
